# qif_personal_finance

./: .dockerignore  .env.template  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  FY25_Tax_Deductible_Report.txt  Makefile  PROMPT.md  README.md  SESSION_SUMMARY.md  STATUS_UPDATE.md  activity.md  coles-auth.sh  dagster.yaml  dashboard-priority.md  docker-compose.local.yml  docker-compose.yml  dockerfile  done.md  extract_dashboard_meta.py  fy25_tax_deductible_expenses.sql  fy25_tax_deductible_summary.sql  import-keep-token.sh  plan-fixes.md  plan.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  run-iterations.ps1  sample.env  test_unique_id.py  todo-features.md  todo-fix.md  todo-fixes.md  workspace.yaml
dagster_core/: dagster.yaml  dockerfile  pyproject.toml
data_projects/qif_personal_finance/pipeline_personal_finance/: .sqlfluff  assets.py  assets_dashboard_qa.py  constants.py  dagster.yaml  definitions.py  docker-entrypoint.sh  dockerfile  postgres_connection_details.json  postgres_readiness_gate.py  pyproject.toml  qif_ingestion.py  resources.py  workspace.yaml
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/: .gitignore  .sqlfluffignore  AGENTS.md  LOCAL_DEV.md  README.md  REFACTORING_SUMMARY.md  dbt_project.yml  packages.yml  profiles.yml
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/grafana_dashboards_json/: README.md
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/local_profiles/: profiles.yml
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/macros/: get_table_names.sql  stage_bank_transactions.sql
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/scripts/: generate_synthetic_data.py  run_local_validation.ps1  validate_grafana_dashboards.py
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/seed_templates/: property_valuation_overrides.template.csv
data_projects/qif_personal_finance/pipeline_personal_finance/dbt_finance/tests/: test_account_dimension_integrity.sql  test_category_completeness.sql  test_date_range_validity.sql  test_exec_net_worth_consistency.sql  test_expense_macro_alignment.sql  test_interest_categorization.sql  (+4 more)
data_projects/qif_personal_finance/pipeline_personal_finance/pipeline_personal_finance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline_personal_finance/: __init__.py  assets.py  assets_dashboard_qa.py  constants.py  dagster.yaml  dashboard_policy_gate.py  definitions.py  docker-entrypoint.sh  dockerfile  postgres_readiness_gate.py  pyproject.toml  qif_ingestion.py  readme.md  requirements.txt  resources.py  run_timeout.py  test_resources.py  workspace.yaml
pipeline_personal_finance/dbt_finance/: .gitignore  .sqlfluff  FOREIGN_KEY_CONSTRAINTS.md  LOCAL_DEV.md  README.md  README_STANDALONE_SQL.md  compile_standalone_sql.py  dbt_project.yml  package-lock.yml  profiles.yml
pipeline_personal_finance/dbt_finance/analyses/: qa_interest_vs_mortgage_payments.sql  qa_metric_consistency.sql
pipeline_personal_finance/dbt_finance/duckdb/: .gitignore
pipeline_personal_finance/dbt_finance/local_profiles/: .user.yml  profiles.yml
pipeline_personal_finance/dbt_finance/macros/: calculate_adjusted_balance.sql  create_fk_if_not_exists.sql  get_table_names.sql  metric_expense.sql  metric_income.sql  metric_interest_payment.sql  stage_bank_transactions.sql  utility_macros.sql
pipeline_personal_finance/dbt_finance/models/marts/: dim_accounts.sql  dim_categories.sql  fct_transactions.sql  schema.yml
pipeline_personal_finance/dbt_finance/models/reporting/: _reporting_models.yml  _reporting_sources.yml  date_calendar.sql  dim_account.sql  dim_accounts_enhanced.sql  dim_categories_enhanced.sql  dim_category.sql  fact_daily_balances.sql  fact_transactions_enhanced.sql  fct_daily_balances.sql  fct_transactions.sql  fct_transactions_enhanced.sql  reporting__fact_transactions.sql  reporting__periodic_snapshot_yyyymm_balance.sql  rpt_fact_transactions.sql  rpt_periodic_snapshot_yyyymm_balance.sql  schema.yml
pipeline_personal_finance/dbt_finance/models/staging/: schema.yml  staging__Adelaide_Homeloan.sql  staging__Adelaide_Offset.sql  staging__Bendigo_Bank_Homeloan.sql  staging__Bendigo_Bank_Offset.sql  staging__Bendigo_Homeloan.sql  staging__Bendigo_Offset.sql  staging__ING_billsbillsbills.sql  staging__ING_countdown.sql  stg_adelaide_offset.sql  stg_bendigo_homeloan.sql  stg_bendigo_offset.sql  stg_ing_billsbillsbills.sql  stg_ing_countdown.sql
pipeline_personal_finance/dbt_finance/models/transformation/: int_account_balances.sql
pipeline_personal_finance/dbt_finance/scripts/: generate_synthetic_data.py  run_local_validation.ps1  validate_grafana_dashboards.py
pipeline_personal_finance/dbt_finance/seed_templates/: recommendation_outcomes.template.csv
pipeline_personal_finance/dbt_finance/seeds/: banking_categories.csv  categories_allowed.csv  known_values.csv  mortgage_patch_data.csv  mortgage_patch_seeds.yml  property_assets.csv  property_valuation_overrides.csv  recommendation_outcomes.csv  seeds.yml
pipeline_personal_finance/dbt_finance/snapshots/: account_snapshot.sql
pipeline_personal_finance/dbt_finance/tests/: schema.yml  test_account_dimension_integrity.sql  test_balance_continuity.sql  test_category_completeness.sql  test_constraint_existence.sql  test_date_range_validity.sql  test_expense_macro_alignment.sql  test_financials_reconciliation.sql  test_foreign_key_constraints.sql  test_interest_categorization.sql  test_metric_consistency_exec_vs_mbs.sql  test_outflows_reconciliation.sql
pipeline_personal_finance/grafana_dashboard/: balance_dashboard.json  dashboard_model.json  transaction_dashboard.json
(+452 files in other folders)
