[tool.poetry]
name = "personal finance dashboard"
version = "0.1.0"
description = ""
authors = ["Phil Patterson <philip.james.patterson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
quiffen = "^2.0.9"
pandas = "<2.1"
dagster = "^1.7.4"
dbt-postgres = "^1.7.14"
dbt-core = "^1.7.14"
dagster-dbt = "^0.23.4"
dagster-webserver = "^1.7.4"
dbt = "^1.0.0.37.15"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
