[project]
name = "qif-personal-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.13",
    "dagster-dbt>=0.24.13",
    "dagster-webserver>=1.8.13",
    "dbt-postgres>=1.9.0",
]

[dependency-groups]
dev = [
    "pandas>=2.2.0",
    "pytest>=9.0.2",
    "sqlfluff>=3.3.0",
    "sqlfluff-templater-dbt>=3.3.0",
]

[tool.uv.workspace]
members = [
    "platform/dagster_core",
    "data_projects/qif_personal_finance/pipeline_personal_finance",
]
