[tool.poetry]
name = "dagster core services"
version = "0.1.0"
description = ""
authors = ["Phil Patterson <philip.james.patterson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "^1.7.4"
dagster-postgres = "^0.25.1"
dagster-graphql = "^1.9.1"
dagster-webserver = "^1.9.1"
dagster-docker = "^0.25.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
