[tool.poetry]
name = "pipeline personal finance"
version = "0.1.0"
description = "Dagster pipeline for a personal project"
authors = ["Phil Patterson <philip.james.patterson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
quiffen ="*"
pandas  ="*"
dagster  ="*"
dagster-postgres  ="*"
numpy  ="*"
dagster-dbt  ="*"
dagster-duckdb-pandas = "^0.23.13"
dbt-postgres = "^1.8.2"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
