[tool.poetry]
name = "pipeline personal finance"
version = "0.1.0"
description = "Dagster pipeline for a personal project"
authors = ["Phil Patterson <philip.james.patterson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
quiffen ="*"
pandas  ="*"
dagster  ="*"
dagster-postgres  ="*"
numpy  ="*"
dagster-dbt  ="*"
dbt-postgres = "^1.8.2"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.1.1"
sqlfluff-templater-dbt = "^3.2.5"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
