[project]
name = "pipeline-personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.13",
    "dagster-dbt>=0.24.13",
    "dagster-postgres>=0.24.13",
    "dagster-webserver>=1.8.13",
    "dbt>=1.0.0.38.23",
    "dbt-core>=1.8.8",
    "dbt-postgres>=1.9.0",
    "numpy>=2.2.2",
    "pandas>=2.2.0",
    "quiffen>=1.2.4",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.3.0",
]
